crates/mdbook-rustdoc-links/tests/deserialize_package/stderr/data.txt
ERROR mdbook-rustdoc-links: failed to read preprocessor config from book.toml

Caused by:
    TOML parse error at line 2, column 21
      |
    2 | packages = ["itoa", 1]
      |                     ^
    invalid type: integer `1`, expected package spec
    
ERROR mdbook_core::utils: The "rustdoc-links" preprocessor exited unsuccessfully with exit status: 1 status
